--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ variables:
     ANDROID_SDK_TOOLS:   "4333796"
 
 before_script:
-    - sudo apt-get --quiet update --yes
-    - sudo apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+    - echo 123 | sudo -S apt-get --quiet update --yes
+    - echo 123 | sudo -S apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
     - wget --quiet --ouput-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
     - unzip -d android-sdk-linux android-sdk.zip
     - echo y | android-sdk-linux/tools/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
