--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
     - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
     - export ANDROID_HOME=$PWD/android-sdk-linux
     - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
-    - chmod SoundRecord/gradlew
+    - chmod +x SoundRecord/gradlew
     - set +o pipefail
     - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
     - set -o pipefail
