--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,9 @@ lintDebug:
     stage: build
     script:
         - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
+    artifacs:
+        paths:
+            - app/lint/reports/*.html
 
 assembleDebug:
     stage: build
@@ -36,7 +39,7 @@ assembleDebug:
         - ./gradlew assembleDebug
     artifacts:
         paths:
-            - app/build/outputs/
+            - app/build/outputs/*
 
 
 latex:
@@ -51,5 +54,5 @@ latex:
         - latexmk -pdf -cd docs/dissertation/dissertation.tex
     artifacts:
         paths:
-            - "*.pdf"
+            - docs/dissertation/*.pdf
 
