--- a/SoundRecord/app/build.gradle
+++ b/SoundRecord/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'org.apache.commons:commons-io:1.3.2'
 }
