--- a/SoundRecord/app/src/main/AndroidManifest.xml
+++ b/SoundRecord/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
         <activity
-            android:name=".Home"
+            android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -35,19 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyTests"
+            android:name=".MyTestsActivity"
             android:label="@string/title_activity_my_tests"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".Results"
-            android:label="@string/title_activity_results"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".Trials"
-            android:label="@string/title_activity_trials"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".Processing"
+            android:name=".ProcessingActivity"
             android:label="@string/title_activity_processing"
             android:theme="@style/AppTheme.NoActionBar" />
         <uses-library
