--- a/SoundRecord/app/src/main/AndroidManifest.xml
+++ b/SoundRecord/app/src/main/AndroidManifest.xml
@@ -21,9 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
         <activity
-            android:name=".Home"
+            android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -33,19 +32,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyTests"
+            android:name=".ResultsActivity"
             android:label="@string/title_activity_my_tests"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".Results"
-            android:label="@string/title_activity_results"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".Trials"
-            android:label="@string/title_activity_trials"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".Processing"
+            android:name=".ProcessingActivity"
             android:label="@string/title_activity_processing"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -74,7 +65,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".FormPDF"
+            android:name=".FormPDFActivity"
             android:label="@string/title_activity_form_pdf"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
