Revert "Merge branch 'processing' into 'master'"
This reverts merge request !31

--- a/SoundRecord/app/src/main/AndroidManifest.xml
+++ b/SoundRecord/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +14,8 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,8 +23,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".Home"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -32,17 +35,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ResultsActivity"
+            android:name=".MyTests"
             android:label="@string/title_activity_my_tests"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".ProcessingActivity"
+            android:name=".Results"
+            android:label="@string/title_activity_results"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Trials"
+            android:label="@string/title_activity_trials"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Processing"
             android:label="@string/title_activity_processing"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
+
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -58,16 +69,10 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-
+            android:label="@string/title_activity_maps"></activity>
         <service
             android:name=".FetchAddressIntentService"
-            android:exported="false" />
-
-        <activity
-            android:name=".FormPDFActivity"
-            android:label="@string/title_activity_form_pdf"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:exported="false"/>
     </application>
 
 </manifest>
