Added Begin button to MapsActivity and created RecordingActivity. Closes #77 and #85

--- a/SoundRecord/app/src/main/AndroidManifest.xml
+++ b/SoundRecord/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RecordingActivity"></activity>
         <activity
             android:name=".ResultsActivity"
             android:label="@string/title_activity_results"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
