--- a/SoundRecord/app/build.gradle
+++ b/SoundRecord/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.jjoe64:graphview:4.2.2'
+
 }
