--- a/SoundRecord/app/src/main/AndroidManifest.xml
+++ b/SoundRecord/app/src/main/AndroidManifest.xml
@@ -19,16 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".BluetoothActivity"></activity>
-        <activity android:name=".RecordingActivity"></activity>
+        <activity android:name=".BluetoothActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".RecordingActivity"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ResultsActivity"
             android:label="@string/title_activity_results"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,16 +41,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".FinalActivity"
             android:label="@string/title_activity_my_tests"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait" />
 
 
         <activity
             android:name=".ProcessingActivity"
             android:label="@string/title_activity_processing"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" />
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
@@ -64,6 +72,7 @@
 
         <activity
             android:name=".MapsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_maps"></activity>
         <service
             android:name=".FetchAddressIntentService"
@@ -71,6 +80,7 @@
 
         <activity
             android:name=".FormPDFActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_form_pdf"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
